<resources>
    <string name="app_name">DriveSober</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Drive Sober</string>

    <!-- Menu items -->
    <string name="action_greeting">Hello Username</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_sms">Send SMS</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_logout">Logout</string>

    <!-- Intro Activity -->
    <string name="intro_settings_weight_label">Set Weight</string>
    <string name="intro_settings_gender_label">Set Gender</string>
    <string name="intro_register_button">Register</string>
    <string name="intro_settings_content_description_female">Set gender female image</string>
    <string name="intro_settings_content_description_male">Set gender male image</string>

    <!-- Main Activity -->
    <string name="nightout_sober">Sober</string>
    <string name="nightout_add_consumption">Add consumption to start</string>
    <string name="nightout_sober_at">Sober at</string>

    <string name="nightout_label_date">DATE</string>
    <string name="nightout_label_firstdrink">FIRST DRINK</string>
    <string name="nightout_label_bac">BAC</string>
    <string name="nightout_label_units">UNITS</string>

    <!-- History Activity -->
    <string name="title_historynightoutitem_list">HistoryNightOutItems</string>
    <string name="title_historynightoutitem_detail">HistoryNightOutItem Detail</string>

    <!-- Preferences -->
    <string name="pref_root_key">root_preferences</string>

    <!-- Preference Titles -->
    <string name="pref_user_header">User Preferences</string>
    <string name="pref_app_header">App Preferences</string>

    <!-- Name Preference -->
    <string name="pref_name_title">Username</string>
    <string name="pref_name_key" translatable="false">username</string>
    <string name="pref_name_default">John Doe</string>


    <!-- Geslacht Preference -->
    <string name="pref_gender_title">Gender</string>
    <string name="pref_gender_key" translatable="false">gender</string>
    <string name="pref_gender_male_label">Male</string>
    <string name="pref_gender_male_value" translatable="false">male</string>
    <string name="pref_gender_female_label">Female</string>
    <string name="pref_gender_female_value" translatable="false">female</string>
    <string name="pref_gender_default" translatable="false">female</string>

    <!-- Weight Preference -->
    <string name="pref_weight_title">Weight</string>
    <string name="pref_weight_key" translatable="false">weight</string>
    <string name="pref_weight_default">75</string>

    <!-- NightOut Model -->
    <!-- Drunk Fases icoon -->
    <string name="ic_drunk_fase_1">ic_drunk_fase_1</string>
    <string name="ic_drunk_fase_2">ic_drunk_fase_2</string>
    <string name="ic_drunk_fase_3">ic_drunk_fase_3</string>
    <string name="ic_drunk_fase_4">ic_drunk_fase_4</string>
    <string name="ic_drunk_fase_5">ic_drunk_fase_5</string>
    <string name="ic_drunk_fase_6">ic_drunk_fase_6</string>

    <!-- Drinks List -->
    <string name="con_beer_pint">Beer Pint</string>
    <string name="con_beer_can">Beer Can</string>
    <string name="con_beer_special">Special Beer</string>
    <string name="con_wine_glass">Wine Glass</string>
    <string name="con_wine_bottle">Wine Bottle</string>
    <string name="con_spirit_glass">Spirit</string>
    <string name="con_spirit_bottle">Spirit Bottle</string>
    <string name="con_champagne">Champagne Glass</string>
    <string name="con_mix_drink">Mixdrink Glass</string>

    <!-- Consumption units -->
    <string name="consumption_unit">unit</string>
    <string name="consumption_units">units</string>

    <!-- SMS -->
    <string name="sms_part1">Please pick me up. My BAC is </string>
    <string name="sms_part2"> and I am only allowed to drive again at </string>

    <!-- Notification -->
    <string name="noti_body">The wait is over. All the alcohol is out of your blood.</string>
    <string name="noti_title">Drive Sober</string>



    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
