<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroRegisterActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_intro_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_gradient_style"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/intro_register_button"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_intro_settings_gender_label" />

        <NumberPicker
            android:id="@+id/np_set_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:textSize="64sp"
            android:theme="@android:style/Widget.Material.Light.NumberPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_intro_settings_weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro_settings_weight_label"
            app:layout_constraintEnd_toEndOf="@+id/np_set_weight"
            app:layout_constraintStart_toStartOf="@+id/np_set_weight"
            app:layout_constraintTop_toBottomOf="@+id/np_set_weight" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:autofillHints="@string/prompt_email"
            android:hint="testl"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <ImageView
            android:id="@+id/iv_intro_settings_img_male"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:alpha="0.4"
            android:contentDescription="@string/intro_settings_content_description_male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_intro_settings_weight_label"
            app:srcCompat="@drawable/ic_male" />

        <ImageView
            android:id="@+id/iv_intro_settings_img_female"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/intro_settings_content_description_female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_intro_settings_weight_label"
            app:srcCompat="@drawable/ic_female" />

        <TextView
            android:id="@+id/tv_intro_settings_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro_settings_gender_label"
            app:layout_constraintEnd_toEndOf="@+id/iv_intro_settings_img_male"
            app:layout_constraintStart_toStartOf="@+id/iv_intro_settings_img_female"
            app:layout_constraintTop_toBottomOf="@+id/iv_intro_settings_img_female" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>