<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstlaunch.IntroSettingsActivity">

    <NumberPicker
        android:id="@+id/np_set_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="64dp"
        android:textSize="64sp"
        android:theme="@android:style/Widget.Material.Light.NumberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_intro_settings_img_female"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/intro_settings_content_description_female"
        app:layout_constraintEnd_toStartOf="@+id/iv_intro_settings_img_male"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_settings_weight_label"
        app:srcCompat="@drawable/ic_female" />

    <ImageView
        android:id="@+id/iv_intro_settings_img_male"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:alpha="0.4"
        android:contentDescription="@string/intro_settings_content_description_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_settings_weight_label"
        app:srcCompat="@drawable/ic_male" />

    <Button
        android:id="@+id/btn_intro_settings_set_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/intro_settings_preferences_button"
        android:textColor="#fff"
        android:background="@drawable/btn_gradient_style"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_intro_settings_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_settings_weight_label"
        app:layout_constraintEnd_toEndOf="@+id/np_set_weight"
        app:layout_constraintStart_toStartOf="@+id/np_set_weight"
        app:layout_constraintTop_toBottomOf="@+id/np_set_weight" />

    <TextView
        android:id="@+id/tv_intro_settings_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_settings_gender_label"
        app:layout_constraintEnd_toEndOf="@+id/iv_intro_settings_img_male"
        app:layout_constraintStart_toStartOf="@+id/iv_intro_settings_img_female"
        app:layout_constraintTop_toBottomOf="@+id/iv_intro_settings_img_female" />
</androidx.constraintlayout.widget.ConstraintLayout>