<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nightout_label_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_date_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
        tools:text="Zondag, 26 januari 2020" />

    <TextView
        android:id="@+id/tv_firstdrink_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nightout_label_firstdrink"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bac_label" />

    <TextView
        android:id="@+id/tv_firstdrink_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_firstdrink_label"
        app:layout_constraintStart_toStartOf="@+id/tv_firstdrink_label"
        tools:text="21u58" />

    <TextView
        android:id="@+id/tv_units_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/nightout_label_units"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bac_label" />

    <TextView
        android:id="@+id/tv_units_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_units_label"
        app:layout_constraintEnd_toEndOf="@+id/tv_units_label"
        tools:text="2.9" />

    <TextView
        android:id="@+id/tv_bac_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/nightout_label_bac"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sober_value"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_bac_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_bac_label"
        app:layout_constraintEnd_toEndOf="@+id/tv_bac_label"
        app:layout_constraintStart_toStartOf="@+id/tv_bac_label"
        tools:text="0,756 ‰" />

    <TextView
        android:id="@+id/tv_sober_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/nightout_sober_at"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sober_value"
        app:layout_constraintStart_toStartOf="@+id/tv_sober_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sober_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sober_label"
        tools:text="09u42" />

    <ImageView
        android:id="@+id/iv_save"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bell" />

</androidx.constraintlayout.widget.ConstraintLayout>